RESOLVED FIXED180977
API test WKAttachmentTests.InsertPastedAttributedStringContainingMultipleAttachments is failing on El Capitan and Sierra
https://bugs.webkit.org/show_bug.cgi?id=180977
Summary API test WKAttachmentTests.InsertPastedAttributedStringContainingMultipleAtta...
Ryan Haddad
Reported 2017-12-19 09:39:54 PST
API test WKAttachmentTests.InsertPastedAttributedStringContainingMultipleAttachments is failing on El Capitan and Sierra https://build.webkit.org/builders/Apple%20Sierra%20Release%20WK2%20(Tests)/builds/6490/steps/run-api-tests/logs/stdio https://build.webkit.org/builders/Apple%20El%20Capitan%20Debug%20WK2%20(Tests)/builds/4696/steps/run-api-tests/logs/stdio 2017-12-19 08:45:50.300 TestWebKitAPI[3218:23049405] Encountered error: Error Domain=WKErrorDomain Code=4 "A JavaScript exception occurred" UserInfo={WKJavaScriptExceptionLineNumber=1, WKJavaScriptExceptionMessage=TypeError: undefined is not an object (evaluating 'document.querySelectorAll('attachment')[2].getAttribute'), WKJavaScriptExceptionSourceURL=file:///Volumes/Data/slave/elcapitan-debug-tests-wk1/build/WebKitBuild/Debug/TestWebKitAPI.resources/, NSLocalizedDescription=A JavaScript exception occurred, WKJavaScriptExceptionColumnNumber=43} while evaluating script: document.querySelectorAll('attachment')[2].getAttribute('type') FAIL WKAttachmentTests.InsertPastedAttributedStringContainingMultipleAttachments /Volumes/Data/slave/elcapitan-debug/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WKAttachmentTests.mm:858 Value of: observer.observer().inserted.count Actual: 2 Expected: 3U Which is: 3 /Volumes/Data/slave/elcapitan-debug/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WKAttachmentTests.mm:870 Value of: zipAttachment && imageAttachment && pdfAttachment Actual: false Expected: true /Volumes/Data/slave/elcapitan-debug/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WKAttachmentTests.mm:871 Value of: [webView stringByEvaluatingJavaScript:@"document.querySelectorAll('attachment').length"].integerValue Actual: 2 Expected: 3 /Volumes/Data/slave/elcapitan-debug/build/Tools/TestWebKitAPI/cocoa/TestWKWebView.mm:249 Value of: !error Actual: false Expected: true /Volumes/Data/slave/elcapitan-debug/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WKAttachmentTests.mm:874 Value of: [webView stringByEvaluatingJavaScript:@"document.querySelectorAll('attachment')[2].getAttribute('type')"] Actual: "(null)" Expected: "application/zip" /Volumes/Data/slave/elcapitan-debug/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WKAttachmentTests.mm:881 Value of: removedAttachments.count Actual: 2 Expected: 3U Which is: 3 /Volumes/Data/slave/elcapitan-debug/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WKAttachmentTests.mm:882 Value of: [removedAttachments containsObject:zipAttachment.get()] Actual: false Expected: true
Attachments
Patch (4.20 KB, patch)
2017-12-19 12:10 PST, Wenson Hsieh
no flags
Patch (4.07 KB, patch)
2017-12-19 12:28 PST, Wenson Hsieh
no flags
Patch (4.07 KB, patch)
2017-12-19 12:33 PST, Wenson Hsieh
no flags
Patch (4.92 KB, patch)
2017-12-19 13:00 PST, Wenson Hsieh
no flags
Alexey Proskuryakov
Comment 1 2017-12-19 10:07:42 PST
Failing every time since added in https://trac.webkit.org/r226093
Wenson Hsieh
Comment 2 2017-12-19 12:10:57 PST
Wenson Hsieh
Comment 3 2017-12-19 12:28:22 PST
Wenson Hsieh
Comment 4 2017-12-19 12:33:34 PST
Wenson Hsieh
Comment 5 2017-12-19 13:00:28 PST
WebKit Commit Bot
Comment 6 2017-12-19 15:12:04 PST
Comment on attachment 329799 [details] Patch Clearing flags on attachment: 329799 Committed r226148: <https://trac.webkit.org/changeset/226148>
WebKit Commit Bot
Comment 7 2017-12-19 15:12:06 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2017-12-19 15:13:42 PST
Note You need to log in before you can comment on or make changes to this bug.